--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Service</a></li>
                         <!--li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">Courses</a></li-->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">ContactMe</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">Courses</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +43,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">devopswithcloud is for devops youtube channel!</p>
+                        <p class="text-white-75 font-weight-light mb-5">devopswithcloud is for DevOps youtube channel!</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
