--- a/index.html
+++ b/index.html
@@ -104,6 +104,29 @@
                 </div>
             </div>
         </section>
+    </section>
+    <!-- Courses-->
+    <section class="page-section" id="courses">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="mt-0">devops B3</h2>
+                    <hr class="divider my-4" />
+                    <p class="text-muted mb-5">devops B3</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                    <div>+91 9381062032</div>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
+                    ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:devopswithcloud@gmail.com">devopswithcloud@gmail.com</a>
+                </div>
+            </div>
+        </div>
+    </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Copyright © 2020</div></div>
